Fix org logo alignment and sizing.

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -225,7 +225,6 @@ big {
 }
 
 #title {
-    /* margin-top: 16px; */
     padding: 24px 0;
     color: #fcffff;
     /* https://stackoverflow.com/a/34556311/79202 */
@@ -464,12 +463,17 @@ body > footer .code:before {
 }
 
 #orgs { border-top-width: 1px; }
-#orgs img { height: 64px }
 #orgs h3 { margin-bottom: 1em}
 
 #orgs li {
-    display: inline;
-    padding-right: 16px;
+    display: inline-block;
+    padding: 0 16px 16px 0;
+    margin: 0;
+    width: 160px;
+}
+@media only screen and (max-width: 550px) {
+    #orgs li { width: 80%; }
+    #orgs ul { text-align: center; }
 }
 
 main li {
